--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "koa": "^2.15.4",
     "koa-static": "^5.0.0",
     "koa-swig": "^2.2.1",
+    "koa2-connect-history-api-fallback": "^0.1.3",
     "lodash": "^4.17.21",
     "log4js": "^6.9.1",
     "module-alias": "^2.2.3"
