--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "koa2-connect-history-api-fallback": "^0.1.3",
     "lodash": "^4.17.21",
     "log4js": "^6.9.1",
-    "module-alias": "^2.2.3"
+    "module-alias": "^2.2.3",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@types/co": "^4.6.6",
@@ -24,6 +25,7 @@
     "@types/koa-static": "^4.0.4",
     "@types/lodash": "^4.17.15",
     "@types/node": "^22.13.5",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   },
