--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "module": "nodenext", // 指定模块系统
     "esModuleInterop": true, // 允许在CommonJS模块中使用export = 和 import = require()
     "allowSyntheticDefaultImports": true, // 允许从没有设置默认导出的模块中默认导入
-    "typeRoots": ["typings", "node_modules"], // 指定查找类型声明文件的路径
+    "typeRoots": ["./typings", "./node_modules/@types"], // 指定查找类型声明文件的路径
     "baseUrl": "./", // 解析非相对模块的基准目录
     "paths": { // 模块名到基于baseUrl的路径映射的列表
       "@interfaces/*": ["interface/*"], // @interface/* 映射到 interface/* 目录
@@ -18,5 +18,8 @@
   },
   "include": [
     "**/*" // 包含所有文件
-  ]
+  ],
+  "ts-node": {
+    "files": true
+  }
 }
