--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "co": "^4.6.0",
     "koa": "^2.15.4",
     "koa-static": "^5.0.0",
-    "koa-swig": "^2.2.1",
+    "koa-swig": "^2.2.0",
     "koa2-connect-history-api-fallback": "^0.1.3",
     "lodash": "^4.17.21",
     "log4js": "^6.9.1",
     "module-alias": "^2.2.3",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "source-map-support": "^0.5.21"
   },
   "devDependencies": {
     "@types/co": "^4.6.6",
